--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "angular": "~1.0.x"
+    "angular": ">=1.0 <1.3"
   },
   "version": "1.0.0"
 }
